<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <!--suppress AndroidDomInspection -->
    <EditText
        android:id="@+id/input_window"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blue_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        />


    <Button
        android:id="@+id/plus_button"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/three_button"
        android:layout_margin="10dp"
        android:text="@string/plus_button_name"
        android:background="@color/indigo123"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"

        />

    <Button
        android:id="@+id/minus_button"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/six_button"
        app:layout_constraintTop_toBottomOf="@id/plus_button"
        android:layout_margin="10dp"
        android:text="@string/minus_button_name"
        android:background="@color/indigo123"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/multiplication_button"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/nine_button"
        app:layout_constraintTop_toBottomOf="@id/minus_button"
        android:layout_margin="10dp"
        android:text="@string/multiplication_button_name"
        android:background="@color/indigo123"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/division_button"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/zero_button"
        app:layout_constraintTop_toBottomOf="@id/multiplication_button"
        android:layout_margin="10dp"
        android:text="@string/division_button_name"
        android:background="@color/indigo123"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/equals_button"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/input_window"
        app:layout_constraintStart_toEndOf="@id/division_button"

        android:layout_margin="10dp"
        android:text="@string/equals_button_name"
        android:background="@color/indigo123"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/one_button"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/clear_button"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_margin="10dp"
        android:text="@string/one_button"
        android:background="@color/indigo123"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/two_button"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/plus_minus_button"
        app:layout_constraintStart_toEndOf="@id/one_button"
        android:layout_margin="10dp"
        android:text="@string/two_button"
        android:background="@color/indigo123"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/three_button"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/percent_button"
        app:layout_constraintStart_toEndOf="@id/two_button"
        android:layout_margin="10dp"
        android:text="@string/three_button"
        android:background="@color/indigo123"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/four_button"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/one_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        android:text="@string/four_button"
        android:background="@color/indigo123"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        />
    <Button
    android:id="@+id/five_button"
    android:layout_width="60dp"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/two_button"
    app:layout_constraintStart_toEndOf="@id/four_button"
    android:layout_margin="10dp"
    android:text="@string/five_button"
    android:background="@color/indigo123"
    android:textColor="@color/white"
    android:textSize="30sp"
    android:textStyle="bold"
    />

    <Button
        android:id="@+id/six_button"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/three_button"
        app:layout_constraintStart_toEndOf="@id/five_button"
        android:layout_margin="10dp"
        android:text="@string/six_button"
        android:background="@color/indigo123"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/seven_button"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/four_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        android:text="@string/seven_button"
        android:background="@color/indigo123"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/eight_button"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/five_button"
        app:layout_constraintStart_toEndOf="@id/seven_button"
        android:layout_margin="10dp"
        android:text="@string/eight_button"
        android:background="@color/indigo123"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/nine_button"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/six_button"
        app:layout_constraintStart_toEndOf="@id/eight_button"
        android:layout_margin="10dp"
        android:text="@string/nine_button"
        android:background="@color/indigo123"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/zero_button"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/eight_button"
        app:layout_constraintStart_toEndOf="@id/dot_button"
        android:layout_margin="10dp"
        android:text="@string/zero_button"
        android:background="@color/indigo123"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/dot_button"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/seven_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        android:text="@string/dot_button"
        android:background="@color/indigo123"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/clear_button"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/input_window"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        android:text="@string/clear_button"
        android:background="@color/indigo123"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/plus_minus_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/input_window"
        app:layout_constraintStart_toEndOf="@id/clear_button"
        android:layout_margin="10dp"
        android:text="@string/plus_minus_button"
        android:background="@color/indigo123"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="normal"
        />

    <Button
        android:id="@+id/percent_button"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/input_window"
        app:layout_constraintStart_toEndOf="@id/plus_minus_button"
        android:layout_margin="10dp"
        android:text="@string/percent_button"
        android:background="@color/indigo123"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="normal"
        />

</androidx.constraintlayout.widget.ConstraintLayout>